Assignment complete, including optional 'About' page

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,8 +9,12 @@
     <h1>Welcome to my CRM</h1>
   </header>
 
-
   <body>
+
+    <p><a href="/contacts">Contacts</a></p>
+
+    <p><a href="/about">About</a></p>
+
   </body>
 
   <footer>
