Skeleton HTML added to layout.erb

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,7 +8,30 @@
   </head>
 
   <body>
-    <%= yield %>
-  </body>
 
+    <header>
+
+      <h1>Bitmaker CRM</h1>
+
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/contacts">Contacts</a></li>
+        <li><a href="/about">About</a></li>
+        </ul>
+      </nav>
+
+    </header>
+
+    <main>
+      <%= yield %>
+    </main>
+
+    <footer>
+
+      &copy; Bitmaker 1977
+
+    </footer>
+
+  </body>
 </html>
