--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,7 +11,9 @@
 
     <header>
 
-      <h1>Bitmaker CRM</h1>
+      <div class="title">
+        <h1>Bitmaker CRM</h1>
+      </div>
 
       <nav>
         <ul>
