--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,3 +1,7 @@
+<div class="contact_list_header">
+  <h2>There are <%= Contact.count %> contacts:</h2>
+</div>
+
 <ul>
   <% @contacts.each do |contact|%>
     <li>
