--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,16 +3,16 @@
 
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/normalize.css">
     <link rel="stylesheet" href="/styles.css">
     <title>A Most-Excellent Website</title>
   </head>
-
   <body>
 
     <header>
 
       <div class="title">
-        <h1>Bitmaker CRM</h1>
+        <h1>Bitmaker: The CRM</h1>
       </div>
 
       <nav>
