--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: white;
+  box-sizing: border-box;
 }
 
 header {
@@ -10,7 +11,7 @@ header {
   width: 100%;
 }
 
-a {
+nav a {
   text-decoration: none;
   color: white;
 }
@@ -19,11 +20,14 @@ a {
   background-color: #515151;
 }
 
+h1, h2, h3, h4 {
+  margin: 0;
+}
+
 h1 {
   font-size: 40px;
   font-weight: bold;
-  padding: 20px;
-  margin: 0;
+  padding: 28px;
   border-bottom: 1px solid white;
 }
 
@@ -33,7 +37,7 @@ nav li {
   width: 100%;
   border: 1px solid white;
   font-weight: bold;
-  padding: 12px;
+  padding: 14px;
   margin: 0;
 }
 
@@ -42,10 +46,20 @@ nav li {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+  padding: 8px;
+  border: 2px solid white;
+  padding-top: 20px;
+  padding-bottom: 20px;
+
 }
 
 h2 {
+  font-weight: normal;
+  padding-left: 14px;
+}
 
+span {
+  border-bottom: 3px solid #00E8D4;
 }
 
 ul {
@@ -54,11 +68,38 @@ ul {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+  font size: 12px;
+}
+
+.contact {
+  padding-left: 14px;
+}
+
+h3 {
+  color: black;
+  font-size: 24px;
+  padding-bottom: 4px;
+}
+
+h4 {
+  color: black;
+  font-size: 18px;
+  font-weight: normal;
+  padding-bottom: 4px;
+}
+
 li {
   background-color: #00E8D4;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+  border: 2px solid white;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 main {
@@ -72,5 +113,7 @@ footer {
   width: 100%;
   text-align: center;
   color: white;
+  font-size: 18px;
   background-color: black;
+  padding: 24px;
 }
