--- a/views/show_contact.erb
+++ b/views/show_contact.erb
@@ -1,1 +1,10 @@
 <h1>Welcome to show_contact.erb</h1>
+
+
+  <h3>
+    <%= "#{@contact.full_name} (#{@contact.email})" %>
+  </h3>
+
+  <h4>
+    <%= "#{@contact.note}" %>
+  </h4>
