--- a/public/styles.css
+++ b/public/styles.css
@@ -117,3 +117,11 @@ footer {
   background-color: black;
   padding: 24px;
 }
+
+.not_found {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 60px;
+  text-align: center;
+}
