CRM Web Part 4, first steps 'Your First Challenge' and 'Making Our First Form' complete

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,7 @@
     <header>
 
       <div class="title">
-        <h1>Bitmaker: The CRM</h1>
+        <h1>Best CRM Ever!!!</h1>
       </div>
 
       <nav>
