--- a/public/styles.css
+++ b/public/styles.css
@@ -50,7 +50,6 @@ nav li {
   border: 2px solid white;
   padding-top: 20px;
   padding-bottom: 20px;
-
 }
 
 h2 {
@@ -60,6 +59,7 @@ h2 {
 
 span {
   border-bottom: 3px solid #00E8D4;
+  font-weight: bold;
 }
 
 ul {
@@ -106,7 +106,6 @@ main {
   color: black;
   margin-left: auto;
   margin-right: auto;
-
 }
 
 footer {
