--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,14 +12,14 @@
     <header>
 
       <div class="title">
-        <h1>Best CRM Ever!!!</h1>
+        <h1>The Best CRM Ever</h1>
       </div>
 
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/contacts">Contacts</a></li>
-        <li><a href="/about">About</a></li>
+          <li><a href="/about">About</a></li>
         </ul>
       </nav>
 
