--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -14,7 +14,7 @@
         </h4>
         <a href="/contacts/<%=contact.id.to_i%>">View</a> |
         <a href="#">Edit</a> |
-        <a href="#">Delete</a>
+        <a href="/contacts/<%=contact.id.to_i%>">Delete</a>
       </div>
     </li>
   <% end %>
