--- a/views/show_contact.erb
+++ b/views/show_contact.erb
@@ -1,22 +1,34 @@
-<h1>Viewing contact:</h1>
+<div class="show_contact">
 
-<div class="contact">
+  <div class="contact">
 
-  <h3>
-    <%= "#{@contact.full_name} (#{@contact.email})" %>
-  </h3>
+    <h3>
+      <%= "#{@contact.full_name} (#{@contact.email})" %>
+    </h3>
 
-  <h4>
-    <%= "#{@contact.note}" %>
-  </h4>
+    <h4>
+      <%= "#{@contact.note}" %>
+    </h4>
+
+  </div>
+
+  <!-- Your challenge: Add a delete form and submit button to the bottom of your views/show_contact.erb view. -->
+
+  <p>
+    <a href="/contacts/<%=@contact.id.to_i%>/edit">Click here to edit this contact</a>
+  </p>
+
+  <p>
+    Delete this contact?
+  </p>
+  <p>
+    (careful: this can't be undone!)
+  </p>
+  <p>
+    <form action='/contacts/<%= @contact.id %>' method='post'>
+      <input type='hidden' name='_method' value='delete'>
+      <input type='submit' value='Yes. Delete!'>
+    </form>
+  </p>
 
 </div>
-
-<!-- Your challenge: Add a delete form and submit button to the bottom of your views/show_contact.erb view. -->
-
-<h2>Delete this contact?</h2>
-
-<form action='/contacts/<%= @contact.id %>' method='post'>
-  <input type='hidden' name='_method' value='delete'>
-  <input type='submit' value='Yes. Delete!'>
-</form>
